--- a/myApp/index.html
+++ b/myApp/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
 
-    <script defer src="./myApp/game.js"></script>
+    <script defer src="game.js"></script>
     <title>A Spooky Adventure</title>
 </head>
 <body>
